// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneIngressListView renders snapshot when multizone 1`] = `
<div
  class="zoneingresses"
>
  
  <!-- Zone CPs information for when Multicluster is enabled -->
  <div
    class="kcard-stack"
  >
    <div
      class="kcard-border"
    >
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="k-button medium rounded primary refresh-button"
            data-testid="data-overview-refresh-button"
            type="button"
          >
            
            <span
              class="k-button-icon kong-icon kong-icon-redo"
            >
              <svg
                fill="white"
                height="16"
                role="img"
                viewBox="0 0 17 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  Redo
                </title>
                
  
                <path
                  clip-rule="evenodd"
                  d="M12.466 12.06a6.868 6.868 0 112.196-5.676l.85-.85a.847.847 0 011.201-.017c.327.327.315.869-.017 1.2L14.233 9.18c-.342.342-.88.35-1.208.023L10.654 6.83c-.324-.324-.314-.859.028-1.2.34-.34.881-.348 1.2-.029l.847.846a4.938 4.938 0 10-1.63 4.245l1.367 1.367z"
                  fill="white"
                  fill-rule="evenodd"
                />
                

              </svg>
              

            </span>
            
            
             Refresh 
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <div
            class="data-overview-table"
          >
            <div
              class="k-table-container data-overview-table"
              data-testid="data-overview-table"
              is-clickable=""
            >
              <!---->
              <section
                class="k-table-wrapper"
              >
                <table
                  class="k-table has-hover is-clickable"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                    >
                      
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody>
                    
                    <tr
                      class="is-selected"
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                      >
                        
                        <span
                          class="status status--with-title status--success"
                          data-testid="status-badge"
                        >
                          <span
                            class=""
                          >
                            online
                          </span>
                        </span>
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        <a
                          class=""
                          href="/zone-ingresses/zone-ingress-1"
                        >
                          zone-ingress-1
                        </a>
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="kcard-border"
    >
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        
        <header
          class="tab__header"
        >
          
          <h1
            class="entity-heading"
          >
             Zone Ingress: zone-ingress-1
          </h1>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
          >
            <ul
              aria-label="Tabs"
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="tab-item active"
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Overview
                  
                </div>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Zone Ingress Insights
                  
                </div>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                id="xds-configuration-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  XDS Configuration
                  
                </div>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                id="envoy-stats-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Stats
                  
                </div>
              </li>
              <li
                aria-controls="panel-4"
                aria-selected="false"
                class="tab-item"
                id="envoy-clusters-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Clusters
                  
                </div>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              <section
                aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                class="kong-card noBorder"
              >
                <!---->
                <!---->
                <div
                  class="k-card-content d-flex"
                >
                  <div
                    class="k-card-body"
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  >
                    
                    
                    <dl
                      class="definition-list"
                    >
                      
                      
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Type
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          ZoneIngressOverview
                          
                        </dd>
                      </div>
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Name
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          zone-ingress-1
                          
                        </dd>
                      </div>
                      
                      
                    </dl>
                    
                    
                  </div>
                  <!---->
                </div>
              </section>
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="xds-configuration-tab"
              class="tab-container"
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-stats-tab"
              class="tab-container"
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-clusters-tab"
              class="tab-container"
              id="panel-4"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
        </div>
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`ZoneIngressListView renders snapshot when no multizone 1`] = `
<div
  class="zoneingresses"
>
  <section
    class="empty-state-wrapper"
  >
    <div
      class="empty-state-title"
    >
      <!---->
      <div
        class="k-empty-state-title-header mt-4 mb-4"
      >
        
        <span
          class="mb-3 kong-icon kong-icon-dangerCircleOutline"
        >
          <svg
            fill="none"
            height="42"
            role="img"
            viewBox="0 0 17 17"
            width="42"
            xmlns="http://www.w3.org/2000/svg"
          >
            
  
            <title>
              Danger
            </title>
            
  
            <path
              clip-rule="evenodd"
              d="M16.5 8a8 8 0 11-16 0 8 8 0 0116 0zm-2 0a6 6 0 11-12 0 6 6 0 0112 0zm-7-3.5A.5.5 0 018 4h1a.5.5 0 01.5.5v4A.5.5 0 019 9H8a.5.5 0 01-.5-.5v-4zM8 10a.5.5 0 00-.5.5v1a.5.5 0 00.5.5h1a.5.5 0 00.5-.5v-1A.5.5 0 009 10H8z"
              fill="#A3BBCC"
              fill-rule="evenodd"
            />
            

          </svg>
          

        </span>
        <p>
          Kuma is running in Standalone mode.
        </p>
        
      </div>
    </div>
    <div
      class="empty-state-content"
    >
      <div
        class="k-empty-state-message mb-6"
      >
        
        <p>
           To access this page, you must be running in 
          <strong>
            Multi-Zone
          </strong>
           mode. 
        </p>
        
      </div>
      <div
        class="k-empty-state-cta"
      >
        
        <a
          class="k-button medium rounded primary"
          href="https://kuma.io/docs/1.7.x/documentation/deployments/?utm_source=Kuma&utm_medium=Kuma"
          target="_blank"
          type="button"
        >
          
          <!---->
          
          
           Learn More 
          
          <!---->
        </a>
        
      </div>
    </div>
  </section>
</div>
`;

exports[`ZoneIngressListView renders zoneingress insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  
  <header
    class="tab__header"
  >
    
    <h1
      class="entity-heading"
    >
       Zone Ingress: zone-ingress-1
    </h1>
    
  </header>
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
    >
      <ul
        aria-label="Tabs"
        role="tablist"
      >
        
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Overview
            
          </div>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="tab-item active"
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Zone Ingress Insights
            
          </div>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          id="xds-configuration-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            XDS Configuration
            
          </div>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          id="envoy-stats-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Stats
            
          </div>
        </li>
        <li
          aria-controls="panel-4"
          aria-selected="false"
          class="tab-item"
          id="envoy-clusters-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Clusters
            
          </div>
        </li>
        
      </ul>
      
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="kong-card noBorder"
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
          >
            <div
              class="k-card-body"
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              
              
              <ul
                class="accordion-list"
              >
                
                
                <li
                  class="accordion-item active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                    data-testid="accordion-item-button"
                    type="button"
                  >
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-500"
                      >
                         Connect time: July 13, 2021 at 8:41:04 AM
                      </span>
                      <!--v-if-->
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <div
                      class="accordion-item-content"
                      data-testid="accordion-item-content"
                    >
                      
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                             General Information: 
                          </h5>
                          <dl
                            class="definition-list"
                          >
                            
                            <!--v-if-->
                            <div
                              class="definition-list-item"
                            >
                              <dt
                                class="definition-list-item__term"
                              >
                                CP instance ID
                              </dt>
                              <dd
                                class="definition-list-item__details"
                              >
                                
                                kuma-control-plane-84f5589874-nmspq-0867
                                
                              </dd>
                            </div>
                            <div
                              class="definition-list-item"
                            >
                              <dt
                                class="definition-list-item__term"
                              >
                                Last connected
                              </dt>
                              <dd
                                class="definition-list-item__details"
                              >
                                
                                July 13, 2021
                                
                              </dd>
                            </div>
                            <!--v-if-->
                            
                          </dl>
                        </div>
                        <div
                          class="columns mt-4"
                          style="--columns: 4;"
                        >
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              cds: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              eds: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  2
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              lds: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <!--v-if-->
                          
                          
                        </div>
                      </div>
                      
                    </div>
                  </transition-stub>
                </li>
                
                
              </ul>
              
              
            </div>
            <!---->
          </div>
        </section>
        
      </div>
      <div
        aria-labelledby="xds-configuration-tab"
        class="tab-container"
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-stats-tab"
        class="tab-container"
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-clusters-tab"
        class="tab-container"
        id="panel-4"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      
    </div>
  </div>
  
</div>
`;
